# takos

./: .dockerignore  .env.example  .env.local.example  .gitignore  .gitmodules  .npmrc  .prettierrc  .takosumi.build.yml  .takosumi.yml  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  bunfig.toml  compose.local.yml  deno.json  eslint.config.js  install-options.json  main.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.ts  test2.ts  test3.ts  tsconfig.check.json  tsconfig.json  vitest.workspace.ts
.github/: dependabot.yml
.reuse/: dep5
.takos/: state.json
.well-known/: tcs.json
db/: drizzle.config.ts  drop_all.sql
deploy/: TAKOSUMI_DEPLOY.md
docs/: _consistency-report.md  deno.json  index.md  package.json  tsconfig.json
mobile/: README.md  package.json  tsconfig.json  vite.config.ts
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/plugins/mobile-push/android/: build.gradle.kts
plan/: road-to-1.0.md
scripts/: build-container.mjs  build-node-app.mjs  build-release-manifest.ts  build-worker-release-artifact.ts  check-boundaries.mjs  check-i18n-dupe.mjs  check-lockfiles.mjs  check-routing-do-gate.ts  check-staging-dns.ts  check-web-unresolved-identifiers.ts  check-website-host-drift.mjs  check-worker-bindings.ts  deno.json  distribution-smoke.ts  doctor.mjs  force-undici-ipv4.cjs  generate-agent-prompt-assets.ts  generate-agent-prompts.ts  generate-helm-overlays.ts  generate-keys.ts  generate-platform-keys.ts  helm-install-smoke.ts  local-agent-proof.ts  (+53 more)
(+3761 files in other folders)
