[package]
name = "takos-mobile"
version = "0.0.0"
description = "Takos mobile client shell"
authors = ["Takos"]
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "takos_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2.3.2"
tauri-plugin-store = "2"
tauri-plugin-stronghold = "2.3.1"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
tauri-plugin-biometric = "2.3.2"
tauri-plugin-keystore = "2.1.0-alpha.1"
tauri-plugin-mobile-push = "0.1.4"
